Archive2/5a/e08c5109349384/output
+ g++ -std=c++11 -O3 -Wall -Wextra -pedantic -Werror -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:5:2: error: 'a' is used uninitialized in this function [-Werror=uninitialized]
  if( a ) {
  ^
main.cpp:12:15: error: 'b' is used uninitialized in this function [-Werror=uninitialized]
  std::cout << b << std::endl;
               ^
cc1plus: all warnings being treated as errors
