Archive2/5a/e08c5109349384/main.cpp
#include <iostream>

int main() {
    bool a;
	if( a ) {
		std::cout << "True" << std::endl;
	} else {
		std::cout << "False" << std::endl;
	}
	
	int b;
	std::cout << b << std::endl;
}
